components/header.module.scss
.header {
	width: 100%;
	background-image: url("/img/friend-pic1.jpg");
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	height: 550px;
	position: relative;
	display: flex;
	align-items: center;
	justify-content: center;
	margin-bottom: 100px;
}

.container {
	max-width: 600px;
	color: white;
	text-align: center;

}

.title {
	font-size: 43px;
	font-weight: bold;
	line-height: 67px;
	margin-bottom: 10px;
	font-family: proximaNova-Semibold;
}

.subTitle {
	font-family: proximaNova-Semibold;
	font-size: 17px;

}

@media only screen and (min-width: 580px) {
	.title {
		font-size: 56px;
	}

	.subTitle {
		font-size: 20px;
	}

}

